# tailwind-rs-extractor

./: -  .gitignore  CLAUDE.md  Cargo.toml  README.md  example.rspack.config.js  flake.nix  index.js  jest.config.js  package-lock.json  package.json
benches/: extraction_benchmark.rs
lib/: loader.js
rspack-loader/: package.json  tailwind-extractor-loader.js
rspack-plugin/: README.md  package.json  tailwind-extractor-plugin.js
src/: args.rs  ast_mutator.rs  ast_transformer.rs  ast_visitor.rs  class_processor.rs  config.rs  errors.rs  extractor.rs  lib.rs  main.rs  manifest.rs  processor.rs  test_missing.rs
tests/: ast_visitor_tests.rs  cli_tests.rs  end_to_end_tests.rs  error_handling_tests.rs  integration_tests.rs  output_generation_tests.rs  panic_regression_tests.rs  performance_tests.rs  progress_bar_tests.rs  security_tests.rs  test_trace_import.rs
tests/fixtures/: react_component.mjs  rescript_output.res.mjs  simple.js
tests/integration/: html-injection.test.js  plugin.test.js  runtime.test.js  static-runtime.test.js  transform.test.js
tests/integration/fixtures/: App.jsx  ConditionalClasses.jsx  ConditionalTailwind.jsx  Footer.jsx  Header.jsx  StaticClasses.jsx  index.js
