[package]
name = "tailwind-extractor"
version = "0.2.0"
edition = "2021"
authors = ["CapitalMadrid Development Team"]
description = "Tailwind CSS class extraction and processing for server-side rendering"
license = "MIT"

[lib]
name = "tailwind_extractor"
path = "src/lib.rs"

[[bin]]
name = "tailwind-extractor-cli"
path = "src/bin/pipe_cli.rs"

[dependencies]
# Core Tailwind processing
tailwind-rs = { path = "../../vendor/tailwind-rs/projects/tailwind-rs" }

# CLI and configuration
clap = { version = "4.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JavaScript/TypeScript parsing (for transform mode)
swc_core = { version = "27.0.6", features = ["ecma_parser", "ecma_ast", "ecma_visit", "ecma_codegen", "common"], optional = true }

# File handling
glob = "0.3"
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime (for potential future async operations)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util"], optional = true }

# Progress indication
indicatif = { version = "0.17", optional = true }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.10"

[features]
default = ["cli"]
cli = ["swc_core", "tokio", "indicatif"]
# Feature for minimal library usage (just the trait)
minimal = []

[dev-dependencies]
tempfile = "3.0"
insta = "1.0"
regex = "1.10"
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[[bench]]
name = "extraction_benchmark"
harness = false
